fix scrollbars showing

--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ h1 {
 }
 .log > pre {
     margin: 0px;
+    overflow: hidden;
 }
 #error-log > pre {
     color: #cc0000;
@@ -132,6 +133,7 @@ h1 {
     height: 100%;
     width: 100%;
     padding-right: 20px;
+    padding-bottom: 20px;
 }
 .data-table {
     border-collapse: collapse;
